--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "game-list-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://gamba1707.github.io/game-list-app",
+  "homepage": "https://gamba1707.github.io/game-list-app.git",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -21,7 +21,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "rm": "del -rf docs",
+    "mv": "move build docs",
+    "git": "git add . && git commit && git push origin main",
+    "deploy": "npm run rm && npm run build && npm run mv && npm run git"
   },
   "eslintConfig": {
     "extends": [
